--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "homepage": "http://positibelabs.blogspot.com/bundles/mailing",
     "license": "MIT",
-    "version": "0.1.0.0-dev",
+    "version": "0.1.0.0",
     "authors": [
         {
             "name": "Pedro Carlos Abreu Jiménez",
