--- a/Resources/config/sylius_crud.yml
+++ b/Resources/config/sylius_crud.yml
@@ -1,7 +1,5 @@
 sylius_resource:
     resources:
-
-#Servicio autogenerado por Pcabreus Generator 
         positibe.template:
             driver: doctrine/orm
             templates: PositibeMailingBundle:Template
@@ -9,3 +7,13 @@ sylius_resource:
                 model: Positibe\Bundle\MailingBundle\Entity\Template
                 controller: Sylius\Bundle\ResourceBundle\Controller\ResourceController
                 repository: Sylius\Bundle\ResourceBundle\Doctrine\ORM\EntityRepository
+
+        positibe.mail:
+            driver: doctrine/orm
+            templates: PositibeMailingBundle:Mail
+            classes:
+                model: Positibe\Bundle\MailingBundle\Entity\Mail
+                controller: Sylius\Bundle\ResourceBundle\Controller\ResourceController
+                repository: Positibe\Bundle\MailingBundle\Repository\MailRepository
+#                form:
+#                    default: PositibeMailingBundle\Form\Type\MailFormType
