--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -2,5 +2,5 @@ imports:
     - { resource: "sylius_crud.yml" }
 
 parameters:
-     sender_name: %mailer_user%
-     sender_address: %mailer_user%
+     sender_name: "%mailer_user%"
+     sender_address: "%mailer_user%"
