--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "homepage": "http://positibelabs.blogspot.com/bundles/mailing",
     "license": "MIT",
-    "version": "0.3.0.0",
+    "version": "1.0.0-RC1",
     "authors": [
         {
             "name": "Pedro Carlos Abreu Jiménez",
@@ -24,22 +24,21 @@
         }
     ],
     "require": {
-        "symfony/framework-bundle": "~2.7",
-        "doctrine/orm": "~2.4",
+        "symfony/framework-bundle": "^3.2",
+        "doctrine/orm": "~2.5",
         "gedmo/doctrine-extensions": "~2.3",
-        "sylius/resource-bundle": "0.17.*",
+        "sylius/resource-bundle": "^1.0",
         "symfony/swiftmailer-bundle": "~2.3"
     },
     "suggestions": {
-        "positibe/cmf-bundle": "~0.4",
-        "sylius/mailer-bundle": "~0.17"
+        "positibe/core-bundle": "^1.0"
     },
     "autoload": {
         "psr-4": {"Positibe\\Bundle\\MailingBundle\\": ""}
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.3.x-dev"
+            "dev-master": "1.0.x-dev"
         }
     }
 }
